Fix nav spacing

--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -25,7 +25,7 @@
 
         > .item > .link
             font-size: 1.4rem
-            padding: 20px 10px
+            padding: 2px 10px
 
 .nav-home
     margin-top: 40px
@@ -36,7 +36,7 @@
 
         > .item > .link
             font-size: 2rem
-            padding: 7px 30px
+            padding: 7px 20px
             margin: 0
             border-radius: 4%
             transition: all .4s ease-in-out
